// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Group>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Group>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape="square"
    size=""
  >
    <div />
  </Toolbar.Group>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size="xs"
  >
    <div />
  </Toolbar.Group>
</Default__StyledSpan>
`;
